# FreeIFC

./: .gitignore  README.md  build_webifc.sh  freeifc.py
webifc_bind/: CMakeLists.txt  webifc_bind.cpp
